*Empty MediaWiki Message*

--- a/Smallingerlaand.mw
+++ b/Smallingerlaand.mw
@@ -29,35 +29,35 @@ De gemiente Smallingerlaand het veertien officiële plakken. Et heufdplak is [[D
 ===Stad en dörpen===
 Antal inwoners per woongebied op [[1 jannewaori]] [[2017]]:
 {| class="wikitable"
-! Nedersaksische name !! ''Friese name'' !! Inwoners
+! Nedersaksische naeme !! Nederlandse name !! ''Friese naeme'' !! Inwoners
 |-
-|[[Drachten]]||''Drachten''||align="right"|45.168
+|[[Drachten]]||Drachten||''Drachten''||align="right"|45.168
 |-
-|[[Ooldege (Smallingerlaand)|Ooldege]]||''Aldegea''||align="right"|1.701
+|[[Ooldege (Smallingerlaand)|Ooldege]]||Oudega||''Aldegea''||align="right"|1.701
 |-
-|[[Boornbargum]]||''Boarnburgum''||align="right"|1.681
+|[[Boornbargum]]||Boornbergum||''Boarnburgum''||align="right"|1.681
 |-
-|[[Opaende (Frieslaand)|Opaende]]||''De Pein''||align="right"|1.656
+|[[Opaende (Frieslaand)|Opaende]]||Opeinde||''De Pein''||align="right"|1.656
 |-
-|[[Rottevalle]]||''Rottefalle''||align="right"|1.360
+|[[De Rottevalle]]||Rottevalle||''De Rottefalle''||align="right"|1.360
 |-
-|[[Drachtsterkompanjie]]||''Drachtsterkompenije''||align="right"|1.185
+|[[Drachtsterkompeni'je]]||Drachtstercompagnie||''Drachtsterkompenije''||align="right"|1.185
 |-
-|[[Hooltigehaege]]||''De Houtigehage''||align="right"|905
+|[[Hooltigehaege]]||Houtigehage||''De Houtigehage''||align="right"|905
 |-
-|[[De Wilgen]]||''De Wylgen''||align="right"|651
+|[[De Wilgen]]||De Wilgen||''De Wylgen''||align="right"|651
 |-
-|[[Ni'jege]]||''Nyegea''||align="right"|461
+|[[Ni'jege]]||Nijega||''Nyegea''||align="right"|461
 |-
-|[[De Tike]]||''De Tike''||align="right"|311
+|[[De Tike]]||De Tike||''De Tike''||align="right"|311
 |-
-|[[Kortehemmen]]||''Koartehimmen''||align="right"|258
+|[[Kortehemmen]]||Kortehemmen||''Koartehimmen''||align="right"|258
 |-
-|[[De Veenhoop (Smallingerlaand)|De Veenhoop]]||''De Feanhoop''||align="right"|245
+|[[De Veenhoop (Smallingerlaand)|De Veenhoop]]||De Veenhoop||''De Feanhoop''||align="right"|245
 |-
-|[[Goëngahuzen]]||''Goaiïngahuzen''||align="right"|58
+|[[Goëngehuzen]]||Goëngahuizen||''Goaiïngahuzen''||align="right"|58
 |-
-|[[Smalle Ee]]||''Smelle Ie''||align="right"|43
+|[[Smalle Ee]]||Smalle Ee||''Smelle Ie''||align="right"|43
 |}
 <small>Bron: Gemiente Smallingerlaand</small>
 
