--- a/Smallingerlaand.mw
+++ b/Smallingerlaand.mw
@@ -29,7 +29,7 @@ De gemiente Smallingerlaand het veertien officiële plakken. Et heufdplak is [[D
 ===Stad en dörpen===
 Antal inwoners per woongebied op [[1 jannewaori]] [[2017]]:
 {| class="wikitable"
-! Nedersaksische naeme !! Nederlandse name !! ''Friese naeme'' !! Inwoners
+! Stellingwarver naeme !! Nederlandse name !! ''Friese naeme'' !! Inwoners
 |-
 |[[Drachten]]||Drachten||''Drachten''||align="right"|45.168
 |-
