*Empty MediaWiki Message*

--- a/Wymbritserediel.mw
+++ b/Wymbritserediel.mw
@@ -1,7 +1,7 @@
 {{Veurmaolige gemeente |
 naam = Wymbritserediel |
-bestaandsnaam vlagge = VlagWymbritseradiel.jpg |
-bestaandsnaam wapen = WapenWymbritseradiel.jpg |
+bestaandsnaam vlagge = Wymbritseradiel_flag.svg |
+bestaandsnaam wapen = Wymbritseradeel_wapen.svg |
 lokasie = LocatieWymbritseradiel |
 provinsie = [[Frieslaand]] |
 heufdplaotse = [[Ielst (stad)|Ielst]] |  
