--- a/Stappest_(gemiente).mw
+++ b/Stappest_(gemiente).mw
@@ -1,16 +1,16 @@
 {{Gemiente |
 naeme = Stappest |
-bestaansnaeme vlagge = Stappest_vlagge.png |
-bestaansnaeme waopen = Stappest_waopen.png |
+bestaansnaeme vlagge = Staphorst vlag.svg |
+bestaansnaeme waopen = Staphorst wapen.svg |
 lekaosie = LocatieStaphorst |
 perveensie = [[Oaveriessel|Overiessel]] |
 heufdplak = Stappest |  
-oppervlak = 135,70 |
-oppervlak laand = 134,29 |
-oppervlak waeter = 1,41 |
-inwoners = 16.797 |
+oppervlak = 135,69 |
+oppervlak laand = 133,99 |
+oppervlak waeter = 1,7 |
+inwoners = 17.003 |
 daotum inwoners = 1 jannewaori 2019 |
-dichthied = 124 |
+dichthied = 127 |
 brettegraod = 52/38/0/N |
 lengtegraod = 6/12/0/E |
 verkeersaoder = [[Rieksweg 28|A28]], [[Pervèensiale weg 377|N377]] |
@@ -18,7 +18,7 @@ netnummer = 0522 |
 postkode = 7715, 7950-7955 |
 webstee = [http://www.staphorst.nl www.staphorst.nl] |
 }}
-'''Stappest''' ([[Nederlaands|Nederlaans]]: ''Staphorst'') is een gemiente in de [[Nederlaand|Nederlaanse]] [[pervincie|previncie]] [[Oaveriessel]]. De gemiente hef umdebi'j 16.500 inwoners en hef een oppervlakte van 136 [[vierkaante kilemeter|km²]] (mit een te verwaarlozen gedielte an water).
+'''Stappest''' ([[Nederlaands|Nederlaans]]: ''Staphorst'') is een gemiente in de [[Nederlaand|Nederlaanse]] [[pervincie|previncie]] [[Oaveriessel]]. De gemiente hef umdebi'j 17.000 inwoners en hef een oppervlakte van 135,69 [[vierkaante kilemeter|km²]] (mit een te verwaarlozen gedielte an water).
 
 In de gemiente ligt de dörpen [[Stappest]], [[Roevène]], [[De Rieverst]] en [[De Punt (Stappest)|De Punt]], en de [[buurtschop]]pen [[Haalfweg (Stappest)|Halfweg]], [[Hamingen]] en [[Lankhorst]]. In 't oosten van de gemiente ku-j de [[Boswachteri'je Stappest]] vienen. De gemiente wördt bediend deur 't naobi'j elegen stadtien [[Möppelt]] in [[Drenthe]].
 
