--- a/Stappest_(gemiente).mw
+++ b/Stappest_(gemiente).mw
@@ -23,12 +23,11 @@ webstee = [http://www.staphorst.nl www.staphorst.nl] |
 In de gemiente ligt de dörpen [[Stappest]], [[Roevène]], [[De Rieverst]] en [[De Punt (Stappest)|De Punt]], en de [[buurtschop]]pen [[Haalfweg (Stappest)|Halfweg]], [[Hamingen]] en [[Lankhorst]]. In 't oosten van de gemiente ku-j de [[Boswachteri'je Stappest]] vienen. De gemiente wördt bediend deur 't naobi'j elegen stadtien [[Möppelt]] in [[Drenthe]].
 
 ==Uutgaonde verwiezings==
+{{commonscat|Staphorst|Stappest}}
 * [http://www.staphorst.nl/ Webstee van de gemiente Stappest] 
 * [http://www.staphorst.org/ Infermaotie oaver Stappest en Roevène]
 
 {{Oaveriessel}}
-{{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
-{{commonscat|Staphorst|Stappest}}
+{{Dialekt|drt|[[Zuudwest-Zuud-Drèents|Zuudwest-Zuud-Drente]]}}
 
-[[Kategorie:Drèents artikel]]
 [[Kategorie:Stappest| ]]
