*Empty MediaWiki Message*

--- a/Ziepe_(gemeente).mw
+++ b/Ziepe_(gemeente).mw
@@ -10,6 +10,7 @@
 | oppervlakte waoter = 2,17 
 | inwoeners = 11.522
 | daotum inwoeners = [[1 juli]] [[2006]] 
+| dichtheid = 101
 | breedtegraod = 52/48//N 
 | lengtegraod = 4/45//E 
 | verkeersaoder = [[N9]], [[N248]] 
@@ -43,13 +44,6 @@ Den polder van noe, Ziepe-en Hazerpolder wierd in [[1597]] in-epolderd, doorveur
 ==Uutgoande verwiezingen==
 {{commonscat|Zijpe|Ziepe}}
 * [http://www.schagen.nl/ Webstea van de gemeente]
-
-==Galleri-je==
-<gallery>
-Ofbeelding:Burgerbrugge.jpg|Karke in Burgerbrugge
-Ofbeelding:Callantsoge karke.jpg|Karke in Burgerbrugge
-Ofbeelding:Petten 2007.jpg|Petten, anzicht
-</gallery>
 
 {{Noord-Hollaand}}
 
