*Empty MediaWiki Message*

--- a/Ziepe_(gemeente).mw
+++ b/Ziepe_(gemeente).mw
@@ -24,6 +24,8 @@ Op [[1 jannewaori|1 jannewoari]] [[2013]] is de gemeente Ziepe op-egoan in de ni
 
 ==Darpen in de gemeente==
 [[Darp]]en/[[gehucht]]en:
+{|
+|
 *[['t Zaand (Ziepe)|'t Zaand]]
 *[[Abbestede]]
 *[[Burgerbrugge]]
@@ -31,12 +33,14 @@ Op [[1 jannewaori|1 jannewoari]] [[2013]] is de gemeente Ziepe op-egoan in de ni
 *[[Callantsoog]]
 *[[De Stolpen]]
 *[[Groote Keeten]]
+| valign="top" |
 *[[Oldesluus (Ziepe)|Oldesluus]]
 *[[Petten]]
 *[[Schagerbrugge]] (gemeentehoes)
 *[[Sint Meertensbrugge]]
 *[[Sint Meertensvlotbrugge]]
 *[[Sint Meertenszee]]
+|}
 
 ==Ontstoan Ziepe en de gemeente==
 Den polder van noe, Ziepe-en Hazerpolder wierd in [[1597]] in-epolderd, doorveur was et n paar eeuwen lange een stroomgat, geneumd de Ziepe. Den polder was den anvang veur de uutendeleke gemeente Ziepe. Dizze was neet zo groot as noe. Et darp Petten was tot 1929 ne zelfstaandege gemeente, doarna ging et op in de gemeente Ziepe. En de gemeente Callantsoog, dee evormd wierd deur Callantsoog, Abbestede en Groote Keeten, was tot en mit 1989 ne zelfstaandege gemeente, doarnoa was zi-j an-eslotten bi-j de gemeente Ziepe.
