*Empty MediaWiki Message*

--- a/Zaanstad.mw
+++ b/Zaanstad.mw
@@ -2,18 +2,18 @@
 naeme = Zaanstad |
 bestaansnaeme vlagge = Flag of Zaanstad.svg |
 bestaansnaeme waopen = Coat of arms of Zaanstad.svg |
-lekaosie = LocatieZaanstad |
+lekaosie = NL_-_locator_map_municipality_code_GM0479_(2016) |
 perveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplak = [[Zaandiek]] (gemeentehoes) |  
-oppervlak = 83,02 |
-oppervlak laand = ca. 70 |
-oppervlak waeter = ca. 13 |
-inwoners = 142.086 |
-daotum inwoners = 1 juli 2007 |
-dichthied = ca. 2010 |
+oppervlak = 83,24 |
+oppervlak laand = 73,87 |
+oppervlak waeter = 9,37 |
+inwoners = 155.885 |
+daotum inwoners = 1 jannewaori 2019 |
+dichthied = 2110 |
 brettegraod = 52/27//N |
 lengtegraod = 4/48//E |
-verkeersaoder = [[A7]], [[A8]], [[N203]], [[N246]] |
+verkeersaoder = [[A7]], [[A8]], [[A9]], [[A10]], [[N8]], [[N203]], [[N246]], [[N514]], [[N515]], [[N516]] |
 netnummer = 075 |
 postkode = 1500-1509, 1520-1525, 1540-1544, 1550-1567 |
 webstee = [http://www.zaanstad.nl/ www.zaanstad.nl] |
@@ -54,7 +54,7 @@ Zaanstad ligt in gebeed dat vrögger [[Waterland (regio)|Waterland]] wödden ene
 <gallery>
 Ofbeelding:Westzaan.jpg|Stroate in Westzaan
 Ofbeelding:Zaandiek.jpg|Anzicht op Zaandiek
-Ofbeelding:Zaandam karke.jpg|Karke in Zaandam
+Ofbeelding:Protestantse_kerk,_toren,_Assendelft.jpg|Karke in Assendelft
 </gallery>
 
 {{Noord-Hollaand}}
