--- a/Waterlaand_(gemeente).mw
+++ b/Waterlaand_(gemeente).mw
@@ -53,7 +53,7 @@ webstie = [http://www.waterland.nl/ www.waterland.nl] |
 <gallery>
 Ofbeelding:Brook_in_woaterland.jpg|Karke van Brook in Waterlaand
 Ofbeelding:Marken-darp.jpg|Eilaand Marken
-Ofbeelding:Monnickendam_karke.jpg|Karke van Monnickendam
+Ofbeelding:1141 Monnickendam, Netherlands - panoramio (18).jpg|Grote of Sunt-Nikolaoskarke van Monnickendam
 </gallery>
 
 {{Noord-Hollaand}}
