--- a/Wiedemeren.mw
+++ b/Wiedemeren.mw
@@ -2,23 +2,23 @@
 | naam = Wiedemeren
 | bestaandsnaam vlagge = Wijdemeren vlag.png
 | bestaandsnaam woapn = Wijdemeren.svg
-| lokatie-svg = LocatieWijdemeren.png
+| lokatie-svg = NL_-_locator_map_municipality_code_GM1696_(2016).png
 | proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = [[Loosdrecht]]
-| öppervlakte = 76,55
-| öppervlakte laand = 48,09
-| öppervlakte water = 28,46
-| inwonners = 23.403
-| doatum inwonners = 31 dec. 2009
-| dichtheid = 306
+| öppervlakte = 76,36
+| öppervlakte laand = 47,60
+| öppervlakte water = 28,76
+| inwonners = 24.013
+| doatum inwonners = 1 jannewaori 2019
+| dichtheid = 504
 | breedtegroad = 52/13/48/N
 | lengtegroad = 5/7/12/E
-| verkeersoader = [[N201]], [[N236]]
+| verkeersoader = [[N201]], [[N236]], [[N523N]], [[N403]]
 | netnummer = 0294, 035
 | postkode = 1230-1244, 1394, 3625
 | webstie = [http://www.wijdemeren.nl/ www.wijdemeren.nl]
 }}
-'''Wiedemeren''' is ne [[gemiente (bestuur)|gemeente]] in de Nederlandse previnsie [[Noord-Hollaand]]. De gemeente is ontstoan op 1 januari [[2002]] uut et samengoan van de gemeenten Loosdrecht (dee doorveur in de previnsie [[Utrecht (provincie)|Utrecht]] lag), 's-Gravelaand en Nederhorst den Barg. De gemeente had op 1 juli 2006 23.509 inwonners (bronne: CBS), dee verspreid wont ovver de kernen:
+'''Wiedemeren''' is ne [[gemiente (bestuur)|gemeente]] in de Nederlandse previnsie [[Noord-Hollaand]]. De gemeente is ontstoan op 1 januari [[2002]] uut et samengoan van de gemeenten Loosdrecht (dee doorveur in de previnsie [[Utrecht (provincie)|Utrecht]] lag), 's-Gravelaand en Nederhorst den Barg. De gemeente had op 1 jannewaori 2019 24.013 inwonners (bronne: CBS), dee verspreid wont ovver de kernen:
 * [[Ankeveen]]
 * [[Boomhook]]
 * [[Breukeleveane]]
@@ -41,8 +41,6 @@ De heufdvesteging van de gemeenteleke organisasie bevund zich an den raand van N
 
 == Galleri-je ==
 <gallery>
-Ofbeelding:Old-Loosdrecht karke.jpg|Karke in Old Loosdrecht
-Ofbeelding:Nij loosdrecht Sypesteyn.jpg|Sypesteyn in Ni-j Loosdrecht
 Ofbeelding:Nederhorst bommelstein.jpg|Slot Bommelstein, Nederhorst
 Ofbeelding:Graveland trompenburgh.jpg|Gravenlaand
 </gallery>
