*Empty MediaWiki Message*

--- a/Wiek_bi-j_Duurstee.mw
+++ b/Wiek_bi-j_Duurstee.mw
@@ -2,17 +2,17 @@
 |
 {{Gemeante |
 naam = Wiek bi-j Duurstee |
-bestaandsnaam vlagge = Coat of arms of Wijk bij Duurstede.jpg |
-bestaandsnaam woapn = Vlag_van_Wijk_bij Duurstede.gif |
-lokatie = LocatieWijkBijDuurstede |
+bestaandsnaam vlagge = Vlag_van_Wijk_bij_Duurstede.svg |
+bestaandsnaam woapn = Wijk_bij_Duurstede_wapen.svg |
+lokatie = NL_-_locator_map_municipality_code_GM0352_(2016) |
 proveensie = |
 heufdplaats = Wiek bi-j Duurstee |
-öppervlakte = 50,30 |
-öppervlakte laand = 47,69 |
-öppervlakte water = 2,61 |
-inwonners = 23.440 |
-doatum inwonners = 1 april 2006 |
-dichtheid = 492 |
+öppervlakte = 50,40 |
+öppervlakte laand = 47,62 |
+öppervlakte water = 2,78 |
+inwonners = 23.762 |
+doatum inwonners = 1 jannewaori 2019 |
+dichtheid = 499 |
 breedtegroad = 51/59/0/N |
 lengtegroad = 5/20/0/E |
 verkeersoader = [[N227]], [[N229]]  |
@@ -20,7 +20,7 @@ netnummer = 0343 |
 postkode = 3945, 3947, 3960-3962 |
 webstie = [http://www.wijkbijduurstede.nl www.wijkbijduurstede.nl] |
 }}
-'''Wiek bi-j Duurstee''' is ne [[Stad (woonstee)|stad]] en [[gemiente (bestuur)|gemeente]] in et zuden van de [[Nederland]]se previnsie Utrecht. De gemeente hef ruum 23.000 inwonners op ne oppervlaakte van ne kleine 48 km² woarvan moar 'n klein deel water is. Deur en langs Wiek bi-j Duurstee streumt de revieren [[Nederrien]], [[Lek (rivier)|Lek]], [[Kromme Rien]] en et [[Amsterdam-Rienkanaal]].<br />
+'''Wiek bi-j Duurstee''' is ne [[Stad (woonstee)|stad]] en [[gemiente (bestuur)|gemeente]] in et zuden van de [[Nederland]]se previnsie Utrecht. De gemeente had 23.762 inwonners (1 januari 2019) op ne oppervlaakte van ne kleine 48 km² woarvan moar 'n klein deel water is. Deur en langs Wiek bi-j Duurstee streumt de revieren [[Nederrien]], [[Lek (rivier)|Lek]], [[Kromme Rien]] en et [[Amsterdam-Rienkanaal]].<br />
 
 Wiek bi-j Duurstee hef nen stedenbaand mit [[Jičín]] ([[Tsjechië]]).
 
@@ -71,7 +71,6 @@ De gemeente besteet uut de stad Wiek bi-j Duurstee (18.376 inwonners) en is op 1
 
 ==Galleri-je==
 <gallery>
-Ofbeelding:Wijk_bij_duurstede_kastele.jpg|Kasteel
 Ofbeelding:Wijk_bij_duurstede_molle.jpg|De Mölle
 Ofbeelding:Wijk_bij_duurstede_stroate.jpg|Winkelstroate
 </gallery>
