*Empty MediaWiki Message*

--- a/Wormerlaand.mw
+++ b/Wormerlaand.mw
@@ -1,24 +1,24 @@
 {{Gemeante |
 naam = Wormerlaand |
-bestaandsnaam vlagge = Wormerland vlag.png |
-bestaandsnaam woapn = Wormerland wapen.png |
-lokatie = LocatieWormerland |
+bestaandsnaam vlagge = Flag_of_Wormerland.svg |
+bestaandsnaam woapn = Coat_of_arms_of_Wormerland.svg |
+lokatie = NL_-_locator_map_municipality_code_GM0880_(2016) |
 proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = [[Wormer]] |
-öppervlakte = 45,14 |
-öppervlakte laand = 38,63 |
-öppervlakte water = 6,51 |
-inwonners = 15.824|
-doatum inwonners = [[1 juli]] [[2006]] |
-dichtheid = 410 |
+öppervlakte = 45,18 |
+öppervlakte laand = 38,59 |
+öppervlakte water = 6,59 |
+inwonners = 16.329 |
+doatum inwonners = [[1 januari]] [[2019]] |
+dichtheid = 423 |
 breedtegroad = 52/30//N |
 lengtegroad = 4/51//E |
-verkeersoader = [[A7]], [[N203]] |
+verkeersoader = [[A7]], [[A8]], [[N203]], [[N246]], [[N514]], [[N515]] |
 netnummer = 0299, 075 |
 postkode = 1456-1458, 1530-1534, 1546 |
 webstie = [http://www.wormerland.nl/ www.wormerland.nl] |
 }}
-'''Wormerlaand''' is ne [[gemiente (bestuur)|gemeente]] in de [[Zaanstreake]] in de Nederlandse previnsie [[Noord-Holland]]. De gemeente Wormerland ontstond in [[1991]] deur et samengoan van de gemeenten [[Jisp]], [[Wiedewormer]] en [[Wormer (darp)|Wormer]] en hef ne oppervlaakte van 45,14 km² (woarvan 6,51 km² water). De gemeente Wormerlaand mek deel uut van de [[plusregio]] [[Stadsregio Amsterdam]] en ligt sinds olde tieden in [[Waterlaand (regio)|Waterlaand]].
+'''Wormerlaand''' is ne [[gemiente (bestuur)|gemeente]] in de [[Zaanstreake]] in de Nederlandse previnsie [[Noord-Holland]]. De gemeente Wormerland ontstond in [[1991]] deur et samengoan van de gemeenten [[Jisp]], [[Wiedewormer]] en [[Wormer (darp)|Wormer]] en hef ne oppervlaakte van 45,18 km² (woarvan 6,59 km² water). De gemeente Wormerlaand mek deel uut van de [[plusregio]] [[Stadsregio Amsterdam]] en ligt sinds olde tieden in [[Waterlaand (regio)|Waterlaand]].
 
 == Darpen in de gemeente ==
 [[Darp]]en/[[Gehucht]]:
@@ -37,7 +37,6 @@ webstie = [http://www.wormerland.nl/ www.wormerland.nl] |
 
 == Galleri-je ==
 <gallery>
-Ofbeelding:Jisp.jpg|Karke in Jisp
 Ofbeelding:Neck,_dorp_in_de_gemeente_Wormerland,_Noord-Holland,_Nederland_(2008).jpg|Anzicht op Neck
 Ofbeelding:Neck_jisp_umgaeving.jpg|Neck/Jisp, de umgaeving
 </gallery>
