*Empty MediaWiki Message*

--- a/Demokratiese_Republiek_van_de_Kongo.mw
+++ b/Demokratiese_Republiek_van_de_Kongo.mw
@@ -17,7 +17,7 @@
 | km2 = 2.345.409
 | breedtegroad = 4/19//N 
 | lengtegroad = 15/19//E 
-| region = 
+| region = CD
 | pctwater = 4,3
 | munteenheid = [[Kongolesen Frank]] | valutakode = (CDF)
 | tiedzone = [[UTC]] +1 en +2
@@ -34,6 +34,10 @@ In de Demokratiese Republiek van de Kongo gef et grote vuurroaden natuurlike gro
 
 ==Naam==
 De Demokratiese Republiek van de Kongo heten eerst, in volgorde van geskiedenis, [[Vriestoat Kongo]], [[Belgies Kongo]], [[Republiek van de Kongo (Léopoldville)]], Demokratiese Republiek van de Kongo de [[Republiek Zaïre]] en toen wier de Demokratiese Republiek van de Kongo.
+
+==Referensys==
+<references/>
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Laand]]
 [[Kategorie: Afrika]]
