*Empty MediaWiki Message*

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -15,6 +15,7 @@ dichtheid=78|
 inwonners=49.364.325|region=
 |breedtegroad=1/16//S|
 lengtegroad=36/48//E|
+region=KE|
 volksleed="Ee Mungu Nguvu Yetu" (Oh God of all creation)|
 munteenheid=Keniaanske shilling|
 valutakode=(KES)|tiedzone=UTC+3 (EAT)|
