*Empty MediaWiki Message*

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -12,10 +12,9 @@ religie=Christendom (83%), Islam (15%), Hinduisme, buddhisme|
 pctwater=2.3|
 km2=580.367|
 dichtheid=78|
-inwonners=49.364.325|region=
+inwonners=49.364.325|region=KE
 |breedtegroad=1/16//S|
 lengtegroad=36/48//E|
-region=KE|
 volksleed="Ee Mungu Nguvu Yetu" (Oh God of all creation)|
 munteenheid=Keniaanske shilling|
 valutakode=(KES)|tiedzone=UTC+3 (EAT)|
