*Empty MediaWiki Message*

--- a/De_Balk.mw
+++ b/De_Balk.mw
@@ -1,4 +1,4 @@
-[[Image:De Balk.png|thumb|Locatie van De Balk binnen de gemiente Hardenbarg]]
+{{Coordinate|NS=52/36/2/N|EW=6/23/28/E|type=village|map=right|region=NL-OV|maplevel=adm1st}}
 '''De Balk''' (Nederlaands: ''Balkbrug'') is een [[dörp]]ien in de [[Hardenbarg (gemiente)|gemiente Hardenbarg]] in 't noorden van de [[Nederlaand|Nederlaanse]] [[pervincie]] [[Oaveriessel]]. De N377 deurkruust 't dörp, det een endtien onder de [[Riest (revier)|Riest]], 't grèensreviertien mit [[Drenthe]] lig. In de wiendrichtings noord, oost, zuud, west lig De Balk niet wied van [[Zuudwolde (Drenthe)|Zuudwolde]], [[Hardenbarg (plaatse)|Hardenbarg]], [[Ommen]] en [[Ni'jlusen]]. De plaatse hef 3789 ienwoners (1993 manlu en 1796 vrouwlu).
 
 De Balk hef nauwe kontakten mit de iets noordeliker elegen [[buurtschop]] [[Old Averiest]], daoras 't een karakterestieke Nederlaands hervörmde karke mit dielt.
