*Empty MediaWiki Message*

--- a/De_Jouwer.mw
+++ b/De_Jouwer.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:LekaosieJoure.png|thumb|Ligging van De Jouwer]]
+{{Coordinate|NS=52/57/58/N|EW=5/47/59/E|type=city|map=right|region=NL-FR|maplevel=adm1st|name=De Jouwer}}
 [[Ofbeelding:Jouster toren.JPG|thumb|''Jouster Toren'', de toren van een [[Nederlaanse Hervormde Karke]]]]
 '''De Jouwer''' ([[Nederlaands|Nederlaans]]: ''Joure'', [[Westlaauwers Frais|Fries]]: ''De Jouwer'') is een plak in de perveensie [[Frieslaand]] en is et heufdplak van de [[gemiente (bestuur)|gemiente]] [[De Friese Meren]]. Et beheurde tot [[2014]] tot de vroggere gemiente [[Scharsterlaand]].
 
