*Empty MediaWiki Message*

--- a/Kasteel_Wisch.mw
+++ b/Kasteel_Wisch.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Wisch kastele.jpg|thumb|Kasteel Wisch in Terborg)]]
+[[Ofbeelding:Kasteel_wisch_terborg.jpg|thumb|Kasteel Wisch in Terborg)]]
 
 '''Kasteel Wisch''' is n partikulier bewond kasteel in [[Terborg]], gemeente [[Olde Iesselstreek]] in den [[Achterhook]], [[Gelderlaand]]. Et is ok bekand as Huus Wisch. Et kasteel wodden end [[13e eeuw|13de eeuwe]] sticht deur de heern van Wisch. Et gebouw besteet uut n L-vörmig huus met middeleeuwse hookgebouwen en wongebouwen uut den 16de tot de 18de eeuwe. 
 
