*Empty MediaWiki Message*

--- a/Kasteel_Breevoort.mw
+++ b/Kasteel_Breevoort.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Kasteel bredenvoorde.gif|thumb|200px|Kasteel Breevoort]]
-[[Ofbeelding:Kasteel_bredevoort_1597.jpg|thumb|200px|Kasteel van Breevoort 1597]]
+[[Ofbeelding:Kasteel_bredevoort_1597.jpg|thumb|200px|Kasteel Breevoort 1597]]
 '''Kasteel Breevoort''' was n old kasteel in et [[Groafschap Zutfent]], 
 previnsie [[Gelderlaand]], noordelek elaegen van [[Breevoort]], an de [[Boaven-Slinge|Slinge]]. Et kasteel lag woar noe de skole op 't Zand steet. De fundamenten van dit kasteel ligt woarschienlek nog under den plek woar noe de skole steet en et umrengende gebeed.
 
