*Empty MediaWiki Message*

--- a/Hooltn.mw
+++ b/Hooltn.mw
@@ -1,4 +1,5 @@
-[[Ofbeelding:Hooltn.jpg|thumb|De kearke van Hooltn]]
+{{Coordinate|NS=52/16/53/N|EW=6/25/7/E|type=village|map=right|region=NL-OV|maplevel=adm1st}}
+[[File:Holten(kerk).jpg|thumb|De kearke van Hooltn]]
 '''Hooltn''' ([[Nederlaands]]: ''Holten'') is n döarpken in de [[Sallaand]]se gemeante [[Riesn-Hooltn]], in de [[Nederlaand]]se proveensie [[Oaveriessel]]. De gemeante [[Riesn-Hooltn]] lig vuur n deel in Sallaand en vuur n deel in [[Tweante]], t deel Hooltn lig in [[Sallaand]]. Töt [[2001]] was Hooltn ne zölfstaandige gemeante.
 
 ==Volksoard en sproake==
@@ -11,8 +12,10 @@ t Gebroek van t Sallaands keump nog noar vuurtn in de bienaam van t doarp: ''Keu
 ==Partnergemeante==
 *[[Weenterboarg]] ([[Duutslaand]]) - seend [[14 april]] [[1989]].
 
-{{Riessen-Hoolten}}
+==Oetgoande verwiezingn==
 {{Commonscat|Holten}}
+
+{{Riessen-Hoolten}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
