*Empty MediaWiki Message*

--- a/Lieste_van_kastelen_in_den_Achterhook.mw
+++ b/Lieste_van_kastelen_in_den_Achterhook.mw
@@ -61,9 +61,9 @@ Ofbeelding:Kasteel_wisch_terborg.jpg|Wisch
 Ofbeelding:Marreveld.jpg|Marreveld
 </gallery>
 
+==Uutgoande verwiezing== 
 {{Commonscat|Castles in Gelderland}}
-
-*Uutgoande verwiezing: [http://www.kasteleningelderland.nl/ Kastelen in Gelderland]
+*[http://www.kasteleningelderland.nl/ Kastelen in Gelderland]
 
 [[Kategorie:Achterhooks_artikel]]
 [[Kategorie:Kastele in Nederlaand|*]]
