*Empty MediaWiki Message*

--- a/Sint_Joriskarke_(Breevoort).mw
+++ b/Sint_Joriskarke_(Breevoort).mw
@@ -1,24 +1,19 @@
-[[Ofbeelding:Grootn_karke_breevoort.jpg|thumb|160px|Olde karke van Breevoort]]
-[[Ofbeelding:Bredevoort st joriskerk.jpg|thumb|160px|Sint Joriskarke 2008]]
+[[Ofbeelding:Groote_kerk_te_Bredevoort.jpg|thumb|Olde karke van Breevoort]]
+[[Ofbeelding:Bredevoort st joriskerk.jpg|thumb|Sint Joriskarke 2008]]
 De '''Sint Joriskarke''' is ne laat-gotiese karke in [[Breevoort]], woarvan den fundamenten uut [[1316]] bunt. Bi-j et [[Beleg van Breevoort (1597)|beleg van Breevoort]] in [[1597]] deur prins Maurits, is de olde karke verbraand en bunt de gewelven in-estort. De Reformasie begun mit ne verwooste karke. In [[1599]] wodden begonnen mit den bouw van ne ni-je karke in gotiesen stiel. Bi-j de [[Kruuttoornramp (Breevoort)|ontploffing]] van den kruuttoorn in [[1646]] leep de karke groten schaa op. De karke kreg in 1672 nen mooien [[Rokoko]] preakstool en wodden later veurzeen van n Noaber-orgel. Kenmarkend veur dizze karke is doarnoast den zogeneumden 'boernzolder'. 
 
 ==Name==
-
 De karke dankt heuren name an den schutspatrone van de [[borgman]]nen van Breevoort, [[Sint Joris]] den den draak oaverwon. Op den toorn steet doarumme neet ne weerhane zoas gebrukelek, moar Sint Joris.
 
 ==Restaurasie==
-
 In 2006 hebt zie de grofzerken en natuursteenvloeren in de karke verni-jd. De vloere was verzakt en in slechten toostand, doarbi-j hadden zie vröger wat grofzerken op den kop elegd, dee wollen zie wier aan de juuste kaante leggen.
 Zie hebt uut-ebreid histories underzeuk edoane noar dee zerken, en et blek dat 2 van dee zerken dee op den kop lagen van de [[Drost]]en Haersolte, veurmoalege bewonners van et [[kasteel Breevoort]] waren. Zie kwamen um et leaven samen mit bi-jnoa al eure kinder tiedens den [[Kruuttoornramp_(Breevoort)|kruuttoornramp]] in de [[17e eeuw|17de eeuwe]]. Tiedens de restaurasie ging de boavenste zandloage van rundumme 10 cm dikte vort en wödden zeefd. Hierin wödden vondsten edoane zoas: munten, menseleke resten, gebraandskilderd glas. Wieter hebt zie nen steen evonden van de [[Vereanegde Nederlanden]].   
- 
- 
-==Bekieken==
 
+==Bekieken==
 De Sint Joriskarke is gratis te bekieken [[12 juli]] t/m [[26 augustus]] en altied tiedens de moandelekse grote beukemarkte. Ok tiedens [[open monumentendag]] van 9.30 tot 17.30.
 
 ==Uutgoande verwiezingen==
 * [http://joomla.kerkvenster.nl/ Karkvenster Aalten-Breevoort]
-
 
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Kark in Gelderland]]
