*Empty MediaWiki Message*

--- a/Stiens.mw
+++ b/Stiens.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:LekaosieStiens.png|thumb|250px|Lekaosie Stiens]]
+{{Coordinate|NS=53/15/39/N|EW=5/45/27/E|type=village|map=right|region=NL-FR|maplevel=adm1st}}
 '''Stiens''' is een dörp en de heufdplak van de gemiente [[Liwwadderediel]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]].
 
 Stiens het omdebi'j 7.430 inwoners en leit an de perveensiaole weg de N357, in et noorden van de stad [[Liwwadden (stad)|Liwwadden]].
