*Empty MediaWiki Message*

--- a/Stienwiekerwoold.mw
+++ b/Stienwiekerwoold.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:LekaosieStienwiekerwoold.png|thumb|right|300px|Satellietfoto Stienwiekerwoold en omkrieten]]
+{{Coordinate|NS=52/48/13/N|EW=6/3/42/E|type=village|map=right|region=NL-OV|maplevel=adm1st}}   
 '''Stienwiekerwoold''' is een dörp in de perveensie [[Overiessel]], 3 kilemeter ten noordwesten van [[Stienwiek]]. Et dörp beheurt tot de [[gemiente (bestuur)|gemiente]] [[Stienwiekerlaand]] en hef ongeveer 2000 inwoners. Et lig in de zogenaemde [[Kop van Overiessel]].
 
 ==Geboren in Stienwiekerwoold==
