*Empty MediaWiki Message*

--- a/Top_100_der_Nederlaandse_UNESCO-monumenten.mw
+++ b/Top_100_der_Nederlaandse_UNESCO-monumenten.mw
@@ -106,7 +106,7 @@ Oaveregens hantiert de UNESCO wal ne [[Wealdarfgoodliest]]e, wat volgens heur de
 |-
 | [[Kasteel Eijsden]] || 1635 || [[Eijsden]] || LI || [[Ofbeelding:Eijsden-015.jpg|90x999px|Kasteel Eijsden]]
 |-
-| [[Wester- of Sint Gomaruskarke (Enkhuze)|Westerkarke]] || 1542 || [[Enkhuze]] || NH || [[Ofbeelding:Enkhuizen holten karktoorn.jpg|90x999px|Westerkarke, Enkhuze]]
+| [[Wester- of Sint Gomaruskarke (Enkhuze)|Westerkarke]] || 1542 || [[Enkhuze]] || NH || [[Ofbeelding:Westerkerk_Enkhuizen_Zuidkant_20081227.jpg|90x999px|Westerkarke, Enkhuze]]
 |-
 | [[Stadhoes (Enkhuze)|Stadhoes]] || [[1688]] || Enkhuze || NH || [[Ofbeelding:Enkhuuzen_stadhoes.jpg|90x999px|Stadhoes, Enkhuze]]
 |-
