[[:Kategorie:Museum]] weg-ehaald; [[:Kategorie:Museum in Nederlaand]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Stichting_Freriks.mw
+++ b/Stichting_Freriks.mw
@@ -10,5 +10,5 @@ Wieter is in et museum ne verzameling noordeleke, zudeleke en oosteleke zwarfkei
 <references />}}
 
 [[Kategorie:Achterhooks artikel]]
-[[Kategorie:Museum]]
+[[Kategorie:Museum in Nederlaand]]
 [[Kategorie:Wenters]]
