[[:Kategorie:Museum in Nederlaand]] weg-ehaald; [[:Kategorie:Liesten van museums in Nederlaand]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Liest_van_rieksmusea_in_Nederlaand.mw
+++ b/Liest_van_rieksmusea_in_Nederlaand.mw
@@ -64,4 +64,4 @@ In [[Nederland]] bunt der de volgende (veurmoalige) rieksmusea:
 
 {{DEFAULTSORT:Rieksmusea Nederlaand}}
 [[Kategorie:Achterhooks artikel]]
-[[Kategorie:Museum in Nederlaand|!]]
+[[Kategorie:Liesten van museums in Nederlaand|rieks]]
