−[[Kategorie:Museum in Nederlaand]]; ±[[Kategorie:Liesten van museums in Nederlaand]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lieste_van_museums_in_Nederlaand.mw
+++ b/Lieste_van_museums_in_Nederlaand.mw
@@ -46,6 +46,5 @@ Dit is een '''lieste van [[Museum|museums]] in [[Nederlaand]]'''.
 * [[Lieste van muziekmuseums]]
 * [[Lieste van museums in België]]
 
-[[Kategorie:Museum in Nederlaand]]
-[[Kategorie:Liesten van museums in Nederlaand]]
+[[Kategorie:Liesten van museums in Nederlaand| ]]
 {{Dialekt|sdz}}
