[[:Kategorie:Liesten van museums in Nederlaand]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lieste_van_museums_in_Oaveriessel.mw
+++ b/Lieste_van_museums_in_Oaveriessel.mw
@@ -136,3 +136,4 @@ Dit is een '''lieste van [[Museum|museums]] in [[Oaveriessel]]'''.
 * [[Lieste van museums in Nederlaand]]
 {{Dialekt|sdz}}
 [[Kategorie:Museum in Oaveriessel| ]]
+[[Kategorie:Liesten van museums in Nederlaand|Oaveriessel]]
