[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -1696,3 +1696,4 @@ De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty
 {{Dialekt|wvel||Nysassiske Skryvwyse}}
 
 [[Kategorie:Laand]]
+[[Kategorie:Lysten|Landen van de wearld]]
