[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lyste_van_grykske_eilanden.mw
+++ b/Lyste_van_grykske_eilanden.mw
@@ -141,3 +141,4 @@ Hyr vind jy een '''lyste van grykske eilanden'''. Disse lyste is veare van kompl
 {{Dialekt|wvel||Nysassiske Skryvwyse}}
 
 [[Kategorie:Gryksk eiland]]
+[[Kategorie:Lysten|Grykske eilanden]]
