[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lyste_van_städen_in_Luxembörg.mw
+++ b/Lyste_van_städen_in_Luxembörg.mw
@@ -121,3 +121,4 @@ Een antal städen dragen de titel ''stad'' al sinds de middeleywen, mär de meys
 {{Dialekt|wvel||Nysassiske Skryvwyse}}
 
 [[Category:Luxemburg (laand)]]
+[[Kategorie:Lysten|Luxembörg, städen]]
