+[[Kategorie:Engels]]; +[[Kategorie:Lysten]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Liest_van_Engelse_woorden_mit_n_kontinentoale_verbondschop_mor_n_aandere_betaikenis.mw
+++ b/Liest_van_Engelse_woorden_mit_n_kontinentoale_verbondschop_mor_n_aandere_betaikenis.mw
@@ -615,3 +615,5 @@ Dit is n '''liest mit [[Engels]]e woorden mit n kontinentoale verbondschop, môr
 {{DEFAULTSORT:Engelse Woorden Mit N Kontinentoale Verbondschop Mor N Aandere Betaikenis}}
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Etymologie]]
+[[Kategorie:Engels]]
+[[Kategorie:Lysten|Engelse woorden mit n kontinentoale verbondschop mor n aandere betaikenis]]
