[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Liest_van_Leegsaksische_draank.mw
+++ b/Liest_van_Leegsaksische_draank.mw
@@ -164,3 +164,4 @@ Roond t negende joarhoonderd was der in Tweante al wienbouw. In de buurte van de
 {{DEFAULTSORT:Leegsaksische Draank Liest}}
 
 [[Kategorie:Nedersaksiese kultuur|Draank Liest]]
+[[Kategorie:Lysten|Leegsaksische draank]]
