[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Liest_van_regionaole_feesten.mw
+++ b/Liest_van_regionaole_feesten.mw
@@ -47,3 +47,4 @@ Dit is n '''liest van regionaole feesten''' dei jaorlijks vierd worden in 't [[N
 
 {{DEFAULTSORT:Regionaole Feesten}}
 [[Kategorie:Nedersaksies feest of gebroek]]
+[[Kategorie:Lysten|regionaole feesten]]
