[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Liest_van_schaaikundege_elemìnten.mw
+++ b/Liest_van_schaaikundege_elemìnten.mw
@@ -234,3 +234,4 @@ Dizze '''liest van schaaikundege elemìnten''' is opsteld noar [[atoomnummer]]. 
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Scheikunde|Elemìnten]]
+[[Kategorie:Lysten|schaaikundege elemìnten]]
