[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lieste_mit_Nedersaksiese_archaïsmen.mw
+++ b/Lieste_mit_Nedersaksiese_archaïsmen.mw
@@ -21,3 +21,4 @@ Dit is n '''lieste mit Nedersaksiese archaïsmen'''. n [[Archaïsme]] is n ouwer
 {{Begin}}
 
 [[Kategorie:Nedersaksies]]
+[[Kategorie:Lysten|Nedersaksiese archaïsmen]]
