[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lieste_mit_benamingen_veur_ginnerasies.mw
+++ b/Lieste_mit_benamingen_veur_ginnerasies.mw
@@ -221,3 +221,4 @@ Hieronder vie'j n '''lieste mit benamingen veur de ginnerasies''' in n [[kwartie
 {{Dialekt|ovel|Heerde|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Verwantschap]]
+[[Kategorie:Lysten|benamingen veur ginnerasies]]
