[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lieste_mit_staandpunten_van_politieke_partiejen_over_Nedersaksiese_erkenning_2012.mw
+++ b/Lieste_mit_staandpunten_van_politieke_partiejen_over_Nedersaksiese_erkenning_2012.mw
@@ -35,3 +35,4 @@ Hieronder vie'j n overzichte van de [[politiek]]e partiejen die in [[2012]] vÃ©Ã
 {{Bron|<references />}}
 
 [[Kategorie:Politiek]]
+[[Kategorie:Lysten|staandpunten van politieke partiejen over Nedersaksiese erkenning]]
