[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lieste_van_Veenkelonioals_Grönnegse_begrippen.mw
+++ b/Lieste_van_Veenkelonioals_Grönnegse_begrippen.mw
@@ -83,3 +83,4 @@ De uutdrukken "'''Ik heb t laand swaart liggen'''" betaikent dat n boer zien akk
 [[Kategorie:Drenthe]]
 [[Kategorie:Nedersaksiese woorden en begrippen]]
 [[Kategorie:Geografie van Nederlaand]]
+[[Kategorie:Lysten|Veenkelonioals Grönnegse begrippen]]
