[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lieste_van_dierengelujen.mw
+++ b/Lieste_van_dierengelujen.mw
@@ -232,3 +232,4 @@ Dit overzicht laot per dier t warkwoord zien dat bie zien geluud heurt en de kla
 {{Dialekt|wvel|Nunspeet|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Dier]]
+[[Kategorie:Lysten|dierengelujen]]
