--- a/Lieste_van_graven_van_Olland_en_Zeeland.mw
+++ b/Lieste_van_graven_van_Olland_en_Zeeland.mw
@@ -79,3 +79,4 @@ Ieronder vie-j een lieste van de veurmaolige graven van [[Hollaand (gewest)|Olla
 
 [[Kategorie:Sallaands artikel]]
 [[Kategorie:Graaf van Hollaand en Zeelaand|!!]]
+[[Kategorie:Lysten|graven van Olland en Zeeland]]
