[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lieste_van_hunebedden_in_Nederlaand.mw
+++ b/Lieste_van_hunebedden_in_Nederlaand.mw
@@ -129,3 +129,4 @@ In deze '''lieste van hunebedden in Nederlaand''' staot alle nog bestaonde [[hun
 {{DEFAULTSORT:Lieste Hunebedden Nederlaand}}
 [[Kategorie:Drèents artikel]]
 [[Kategorie:Hunebed|!Lieste Nederlaand]]
+[[Kategorie:Lysten|hunebedden in Nederlaand]]
