[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lieste_van_museums_in_Iran.mw
+++ b/Lieste_van_museums_in_Iran.mw
@@ -10,3 +10,4 @@ Dit is een '''lieste van [[museum|museums]] in [[Iran]]''':
 *Et [[Reza Abbasi Museum]]
 {{Dialekt|sdz}}
 [[Categorie:Museum in Iran| ]]
+[[Kategorie:Lysten|museums in Iran]]
