[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lieste_van_plaatsen_in_Gelderland.mw
+++ b/Lieste_van_plaatsen_in_Gelderland.mw
@@ -1,6 +1,6 @@
 {| align=center class=toccolours 
 |- align=center
-|[[Ofbeelding:Flag of Gelderland.svg|130px|Provincievlag]]||Lieste van [[Gelderlaand|Gelderse]] [[stad (woonstee)|staeden]], [[darp]]en en [[buurtschop]]pen<br>met ne verwiezing naor de [[Gemiente (bestuur)|gemeente]] waorto't ze beheurt.
+|[[Ofbeelding:Flag of Gelderland.svg|130px|border|Provincievlag]]||Lieste van [[Gelderlaand|Gelderse]] [[stad (woonstee)|staeden]], [[darp]]en en [[buurtschop]]pen<br>met ne verwiezing naor de [[Gemiente (bestuur)|gemeente]] waorto't ze beheurt.
 __NOTOC__
 {{abc}}
 |}
@@ -1001,3 +1001,4 @@ __NOTOC__
 |}
 
 [[Kategorie:Plaotse in Gelderlaand| ]]
+[[Kategorie:Lysten|plaatsen in Gelderland]]
