[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lieste_van_presidenten_van_de_Vereanegde_Stoaten.mw
+++ b/Lieste_van_presidenten_van_de_Vereanegde_Stoaten.mw
@@ -492,3 +492,4 @@ Hieronder steet ne chronologiese '''lieste van [[president]]en van de [[Verienig
 {{DEFAULTSORT:Presidenten Van De Vereanegde Stoaten}}
 [[Kategorie:Verenigde Stoatn van Amerika]]
 [[Kategorie:Presideant|*]]
+[[Kategorie:Lysten|presidenten van de Vereanegde Stoaten]]
