[[:Kategorie:Lysten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lieste_van_stadspoorten_in_Nederlaand.mw
+++ b/Lieste_van_stadspoorten_in_Nederlaand.mw
@@ -253,3 +253,4 @@ Hierunder ne lieste van (veurmoalige) [[Stadspoorte|stadspoort]]en in [[Nederlaa
 [[Kategorie:Poorte| ]]
 [[Kategorie:Fort| ]]
 [[Kategorie:Stad in Nederlaand|!]]
+[[Kategorie:Lysten|stadspoorten in Nederlaand]]
