--- a/Gerolf_van_Hollaand.mw
+++ b/Gerolf_van_Hollaand.mw
@@ -22,7 +22,7 @@
 }}
 
 Graaf '''Gerolf van Hollaand''' (rond [[850]] - rond [[896]]) was een [[Lieste van graven van Olland en Zeeland|graaf van Hollaand]] vanof ongeveer [[885]]. Zien name wordt ok wal eschrèven as Gerulf, mangs mit de toevoeging “van [[Kennemerlaand]]”. Zien ofkomst is niet krek bekend; der bint anwiezings dat e een naozaot is van de Friese keuning [[Radboud (koning)|Radboud]].
-
+{{Dialekt|sdz}}
 {{DEFAULTSORT:Gerolf Van Hollaand}}
 [[Kategorie:Graaf van Hollaand en Zeelaand]]
 [[Kategorie:Graaf van West-Frieslaand]]
