*Empty MediaWiki Message*

--- a/Veluwe.mw
+++ b/Veluwe.mw
@@ -1,7 +1,7 @@
 [[Bestaand:Veluwe_5.88540E_52.13388N.jpg|thumb|right|Satellietfoto van de Veluwe]]
 [[Bestaand:Veluwe-kaort.GIF|thumb|Kaorte mit daorop de Veluwe]]
 [[Bestaand:Veluwse_vlagge.png|thumb|n Ontwarp veur n Veluwse vlagge, samenesteld uut verschillende vlaggen van Veluwse gemeenten]]
-De '''Veluwe''' is n [[bos]]rieke laondstreek in de [[Nederlaand|Nederlaondse]] provinsie [[Gelderlaand|Gelderlaond]] en n veurmaolig [[kwartier]] van t [[hartogdom Gelre]]. t Gebied grenst ongeveer an de plaatsen [[Attem|Hattem]] - [[Apeldoorne (stad)|Apeldoorne]] - [[Dieren (Gelderlaand)|Dieren]] - [[Arnem]] - [[Wageningen]] - [[Ee (gemeente)|Ede]] - [[Barreveld (gemeente)|Barneveld]] en [[Harderwiek]]. In brejer opzicht wörden alle Gelderse gemeenten ten westen van de [[Iessel]] tot an de laondstreek de [[Betuwe]] ok töt de Veluwe erekend.
+De '''Veluwe''' is n [[bos]]rieke [[stuwwalle]] laondstreek in de [[Nederlaand|Nederlaondse]] provinsie [[Gelderlaand|Gelderlaond]] en n veurmaolig [[kwartier]] van t [[hartogdom Gelre]]. t Gebied grenst ongeveer an de plaatsen [[Attem|Hattem]] - [[Apeldoorne (stad)|Apeldoorne]] - [[Dieren (Gelderlaand)|Dieren]] - [[Arnem]] - [[Wageningen]] - [[Ee (gemeente)|Ede]] - [[Barreveld (gemeente)|Barneveld]] en [[Harderwiek]]. In brejer opzicht wörden alle Gelderse gemeenten ten westen van de [[Iessel]] tot an de laondstreek de [[Betuwe]] ok töt de Veluwe erekend.
 
 == Natuur ==
 De Veluwe stiet bekend um zien [[bos]]sen en t grootste natuurgebied van [[West-Europa|Noordwest-Europa]], en is zwat 100.000 [[bunder]] groot. In de bossen woenen veural [[haart (daaier)|harten]], [[kniende (dier)|knienen]] en andere wildsoorten. Bie [[Armelo]] giet al iewig lange t verhaal van de [[witte wieven]] in de ronte (dät overigens ok in [[Tweante|Twente]] veurkömp). Naost de bossen stiet de Veluwe ok bekend um zien [[zaandverstuving|zaondverstoevings]], zo as bie [[Kodek|Kootwiek]] en [[Hulshorst]]. De [[raove]] is hier mit sukses opniej uutezet, der komen noe tientallen exemplaren veur.
@@ -12,7 +12,7 @@ In [[Apeldoorne (stad)|Apeldoorne]] stiet t [[Peleis 't Loo|Paleis t Loo]], waor
 Wat godsdienst angiet is der n tweedeling zichtbaor tussen, an de iene kante, de noordelike en westelike helfte van de Veluwe, die n overwegend [[griffemeerd]] karakter hef, en an de aondere kaonte, de oostelike en zujelike helfte van de Veluwe, die meestentieds emaotigd of [[sekularisme|sekulier]] is. In t noorden van t oostelike deel van de Veluwe bint ok n paor [[Rooms-Katholieke Karke|katholieke]] gemeenten (of katholiek samen mit protestants kömp ok wel veur) n veurbeeld hiervan is [[Vaossen]] (tegenswoordig meer protestants). t Noorden en t westen van de Veluwe maakt deel uut van de [[Biebelgördel]] die zich uutstrekt van t noorden van [[Oaveriessel|Overiessel]] tot in [[Zeelaand|Zeelaond]].
 
 === Streektaal ===
-Op de Veluwe wördt der naost t [[Nederlaands|Nederlaonds]] ok n [[Nedersaksies]]e variant espreuken: t [[Veluws]]. Dit wördt inedeeld in t [[West-Veluws]] en t [[Oost-Veluws]]. Zwat 48,6% kan t praoten, van ongeveer 37,0% is t de [[moerstaal]], 65,3% kan t lezen en 34,4% les t vake. Veur t Veluws is der de [[Dialektkringe Salland en OostVeluwe]]. De kringe is onderdeel van t [[Verbond van Nedersaksische Dialektkringen]], die vier maol in t jaor t tiedschrift ''[[De Moespot]]'' uutgèèf.
+Op de Veluwe wördt der naost t [[Nederlaands|Nederlaonds]] ok n [[Nedersaksies]]e variant espreuken: t [[Veluws]]. Dit wördt inedeeld in t [[West-Veluws]] en t [[Oost-Veluws]]. Zwat 48,6% kan t praoten, van ongeveer 37,0% is t de [[moerstaal]], 65,3% kan t lezen en 34,4% les t vake<ref>Taaltelling Nedersaksisch 2005</ref>. Veur t Veluws is der de [[Dialektkringe Salland en OostVeluwe]]. De kringe is onderdeel van t [[Verbond van Nedersaksische Dialektkringen]], die vier maol in t jaor t tiedschrift ''[[De Moespot]]'' uutgèèf.
 
 {{Gelderse gebieden}}
 {{Dialekt|ovel|Oldebroek|Algemene Nedersaksiese Schriefwieze}}
