[[:Kategorie:Plant]] weg-ehaald; [[:Kategorie:Plaante]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Selderie.mw
+++ b/Selderie.mw
@@ -15,4 +15,4 @@ In de [[Oldheid]] had ze de [[selderiekrans]] als pries van de [[Nemeïsche Spel
 * [http://www.verspreidingsatlas.nl/0076 Verspreiding in Nederland FLORON]
 * [http://www.soortenbank.nl/soorten.php?soortengroep=flora_nl_v2&id=1936 Soortenbank]
 {{Dialekt|sdz}}
-[[Kategorie:Plant]]
+[[Kategorie:Plaante]]
