--- a/Nationaal_Tinnen_Figuren_Museum.mw
+++ b/Nationaal_Tinnen_Figuren_Museum.mw
@@ -12,3 +12,4 @@ Op [[11 augustus]] [[2001]] krög et museum et staotus van '[[Museumregister Ned
 * [https://www.tinnenfigurenmuseum.nl/ Webstea van et museum]
 {{Dialekt|sdz}}
 [[Kategorie:Museum]]
+[[Kategorie:Museum in Oaveriessel]]
