--- a/Nationaal_Tinnen_Figuren_Museum.mw
+++ b/Nationaal_Tinnen_Figuren_Museum.mw
@@ -1,5 +1,5 @@
 [[ofbeelding:2018-09-09 Nationaal Tinnen Figuren Museum in de regen.jpg|thumb|400px|Et vroggere stadshuus det now et museum is]]
-Et '''Nationaal Tinnen Figuren Museum''' is een [[museum]] in de [[Oaveriessel|Oaveriesselse]] plaats [[Ommen (stad)|Ommen]]. Et museum zit in et olde stadshuus van Ommen, körtbi'j de brugge oaver de [[Vechte]] ([[N347]]). De oppervlakte van et museum is 600 veerkaante meter en et is op ericht in op [[25 januari]] [[1985]].
+Et '''Nationaal Tinnen Figuren Museum''' is een [[museum]] in de [[Oaveriessel|Oaveriesselse]] plaats [[Ommen (stad)|Ommen]]. Et museum zit in et olde stadshuus van Ommen, körtbi'j de brugge oaver de [[Vechte]] ([[N347]]). De oppervlakte van et museum is 600 veerkaante meter en et is op ericht op [[25 januari]] [[1985]].
 
 De verzameling van et museum bestiet uut [[Tin|tinnen]], [[Pepier|pepieren]], [[Blik|blikken]], [[kunststof]] of [[pepier-maché]] figuren, de eplaatst bint in [[Diorama (model)|diorama's]].
 
