*Empty MediaWiki Message*

--- a/Nationaal_Tinnen_Figuren_Museum.mw
+++ b/Nationaal_Tinnen_Figuren_Museum.mw
@@ -5,7 +5,7 @@ De verzameling van et museum bestiet uut [[Tin|tinnen]], [[Pepier|pepieren]], [[
 
 Et vroggere stadshuus kwamp in [[1982]] in de haanden van een parteculier waornao in [[1985]] et museum in et gebouw kwamp. Eerstens allenig op de eerste en twiede verdieping, daornao [[2001]] ook op de begane grond. 
 
-Op [[11 augustus]] [[2001]] krög et museum et staotus van '[[Museumregister Nederlaand|geregistreerd museum]]'.
+Op [[11 augustus]] [[2001]] krög et museum de staotus van '[[Museumregister Nederlaand|geregistreerd museum]]'.
 
 == Verwiezing ==
 
