--- a/Lieste_van_museums_in_Oaveriessel.mw
+++ b/Lieste_van_museums_in_Oaveriessel.mw
@@ -21,6 +21,10 @@ Dit is een '''lieste van [[Museum|museums]] in [[Oaveriessel]]'''.
 
 * [[Het Gildenhuys]]
 
+=== [[Boorn|Borne]] ===
+
+* [[Bussemakerhuis]]
+
 === [[Dealdn|Delden]] ===
 
 * [[Zoutmuseum]]
