Verwysing nå döärverwyssyde repareerd ([[Kampen]] nå [[Kampen (Overiessel)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Lieste_van_museums_in_Oaveriessel.mw
+++ b/Lieste_van_museums_in_Oaveriessel.mw
@@ -84,7 +84,7 @@ Dit is een '''lieste van [[Museum|museums]] in [[Oaveriessel]]'''.
 * [[Natuurmuseum Holterberg]]
 * [[Oudheidkamer Holten]]
 
-=== [[Kampen]] ===
+=== [[Kampen (Overiessel)|Kampen]] ===
 
 * [[Ikonenmuseum Kampen]]
 * [[Stedelijk Museum Kampen]]
