overkategorisaty - Versy 311102 van [[Special:Contributions/Grwen|Grwen]] ([[User talk:Grwen|oaverleg]]) weaderümmedraid

--- a/Grammofoonmuseum.mw
+++ b/Grammofoonmuseum.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Perpetuum_Ebner_PE38.jpg|right|thumb|300px|Een elektrische platenspeuler (niet uut de verzameling van 't Grammofoonmuseum)]]
+[[Ofbeelding:Perpetuum_Ebner_PE38.jpg|thumb|300px|Een elektrische platenspeuler (niet uut de verzameling van 't Grammofoonmuseum)]]
 't '''Grammofoonmuseum''' is een museum in de [[Aoveriessel|Aoveriesselse]] plaatse [[Neilusen]]. 't Is as stichting opericht in 2002 en kump voort uut de particuliere verzameling van eigenaar Jelle Bos.
 
 ==Verzameling==
@@ -18,4 +18,3 @@ Veur schoelen wördt der ewarkt an een veurlichtingsprogramma aover de geschiede
 
 [[Kategorie:Drèents artikel]]
 [[Kategorie:Museum in Oaveriessel]]
-[[Kategorie:Museum]]
